# genomics-toolkit

./: .dockerignore  .gitignore  Dockerfile  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
data/: reference_genome.fasta  sample_reads.fastq  sample_sequences.fasta  sample_variants.vcf
docs/examples/: README.md  sample_ecoli_report.html
genomics_toolkit/: __init__.py  cli.py  gui.py  sequence_analysis.py  utils.py  variant_calling.py  visualization.py
notebooks/: GUI_Demo.ipynb  GenomicsToolkit_Tutorial.ipynb
scripts/: docker-entrypoint.sh  generate_sample_data.py  run_gui.py
tests/: test_sequence_analysis.py  test_utils.py  test_variant_calling.py
